# bodyscript

./: .env.development  .eslintrc.js  .gitignore  .prettierrc.js  .stylelintrc.js  CODEBASE_MIGRATION_PLAN.md  DATA_FLOW_DOCUMENTATION.md  DEPLOYMENT_PLAN.md  DOCKER_DEPLOYMENT.md  DRY_VIOLATIONS_REPORT.md  Dockerfile.optimized  Dockerfile.original  FINAL_OPTIMIZATION_RESULTS.md  MEMORY_FIX_IMPLEMENTATION_PLAN.md  MEMORY_FIX_IMPLEMENTATION_SUMMARY.md  MEMORY_ISSUE_REPORT.md  NATIVE_DEPLOYMENT.md  README-BUILD.md  README.md  REFACTORING_PLAN.md  activate_py311.sh  analyze_every_frame.py  analyze_occlusion_frames.py  build.js  build.sh  compare_all_optimizations.py  comprehensive_frame_analysis.py  create_skeleton_video.py  dev-server.js  docker-compose.nginx.yml  docker-compose.prod.yml  docker-compose.yml  ec2-instance-info.txt  extract_frames.py  fix_fast_motion.py  fix_rotation_detection.py  frontend_refactoring_plan.md  mediapipe_final_optimized.py  minimal_fix.py  mobile_ui_fix_plan.md  (+37 more)
backend/: .env.example  admin_routes.py  app.py  process_wrapper.py  render.yaml  requirements.txt  storage_r2.py  test_local_processing.py  video_utils.py
core/: __init__.py  config.py  pose_detector.py  video_loader.py
creative_output/: optimization_comparison_report.json
deploy/: deployment-guide.md  disaster-recovery.md  post-deployment-checklist.md  production.sh  rollback.sh  staging.sh
docs/: MEMORY_MANAGEMENT.md  implementation_plan_checklist.md  python_version_note.md  technical_quick_reference.md
examples/: batch_process_videos.py  test_installation.py
frontend/: DEPLOYMENT.md  README.md  REFACTORING_SUMMARY.md  TEST_CHECKLIST.md  admin.html  config.js  download-section-mockup.html  index.html  site.webmanifest  test-tags.html  test-upload-ui.html  upload.html  vercel.json
(+189 files in other folders)
